# prime-vX

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  TODO.txt  adsf  pyproject.toml  test.json  test.txt  test2.dvb
plot-data/: plot-prime.py
prime/: __init__.py  main.py
prime/cloc/: cloc.py  gocloc.py  loc.py  main.py  scc.py  sloccount.py
prime/cloc/_classes/: _clocTool.py
prime/datamodels/: cloc.py
prime/datamodels/metrics/: issue_count.py  issue_density.py  number_of_developers.py
prime/db/: __init__.py  sqlite.py
prime/db/_classes/: _dbHandler.py
prime/exceptions/: __init__.py
prime/issue_trackers/: github.py  main.py
prime/issue_trackers/_classes/: _issueTrackerHandler.py
prime/metrics/: __init__.py  main.py
prime/metrics/bus_factor/: __init__.py  main.py  mapping.py
prime/metrics/issue_count/: __init__.py  main.py  mapping.py
prime/metrics/issue_density/: main.py
prime/metrics/issue_spoilage/: __init__.py  main.py
prime/vcs/: __init__.py  git.py  main.py  mercurial.py
prime/viz/: __init__.py  bus_factor.py  plot-prime.py
prime_vx/: __init__.py  main.py
prime_vx/cloc/: __init__.py  cloc.py  gocloc.py  main.py  scc.py  sloccount.py
prime_vx/datamodels/: cloc.py  issue_tracker.py  issues.py  vcs.py
prime_vx/db/: __init__.py  sqlite.py
prime_vx/exceptions/: __init__.py
prime_vx/issue_trackers/: __init__.py  github.py  main.py
prime_vx/metric/: main.py
prime_vx/metrics/: __init__.py  main.py
prime_vx/shell/: shell.py
prime_vx/vcs/: __init__.py  _vcsHandler.py  git.py  main.py  mercurial.py
(+43 files in other folders)
