[tool.poetry]
name = "prime-vx"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
progress = "^1.6"
sqlalchemy = "^2.0.27"
typedframe = "^0.11.0"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
intervaltree = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prime-vx = 'prime_vx.main:main'
